[gd_scene load_steps=73 format=3 uid="uid://c5yi553p5stvp"]

[ext_resource type="Script" path="res://Actors/Player/Player.gd" id="1_ohx01"]
[ext_resource type="Resource" uid="uid://dx8ahqldpij4l" path="res://Inventory/player_inv.tres" id="2_ptwas"]
[ext_resource type="Resource" uid="uid://cu40ltwv6vmeb" path="res://Inventory/items/apple.tres" id="3_5akqf"]
[ext_resource type="Resource" uid="uid://cye01ec7yfg18" path="res://Inventory/items/stick.tres" id="4_id0fg"]
[ext_resource type="Resource" uid="uid://cy36iea5l70vs" path="res://Inventory/items/slime.tres" id="5_co0ru"]
[ext_resource type="Texture2D" uid="uid://df2mcm7qgjp3e" path="res://Actors/Player/sprites.png" id="6_qw8kl"]
[ext_resource type="AudioStream" uid="uid://dm62joiancm8i" path="res://Sounds/walkingAudio.mp3" id="7_07jjb"]
[ext_resource type="AudioStream" uid="uid://chi51uwllmadm" path="res://Sounds/runningAudio.mp3" id="8_e31mb"]
[ext_resource type="AudioStream" uid="uid://jytr2l6h5lry" path="res://Sounds/waterWalkingSound.mp3" id="9_lgmpu"]
[ext_resource type="AudioStream" uid="uid://b0r04ejy0f0wj" path="res://Sounds/waterRunningAudio.mp3" id="10_xvk8f"]
[ext_resource type="AudioStream" uid="uid://223qun0sgyn0" path="res://Sounds/cartAudio.mp3" id="11_nbevf"]
[ext_resource type="AudioStream" uid="uid://b3t2jebngrfcd" path="res://Sounds/HurtSound.mp3" id="12_trpnf"]
[ext_resource type="AudioStream" uid="uid://pacg5n7d6ied" path="res://Sounds/PlayerAttackSound.mp3" id="13_nbf0a"]
[ext_resource type="AudioStream" uid="uid://2bjh8l52xf62" path="res://Sounds/BlockingSound.mp3" id="14_mii8g"]
[ext_resource type="AudioStream" uid="uid://bye1okkestlny" path="res://Sounds/EatSound.mp3" id="15_r4nuc"]
[ext_resource type="AudioStream" uid="uid://cha7ps131hk32" path="res://Sounds/TransferSound.mp3" id="16_yiflp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q32mr"]
atlas = ExtResource("6_qw8kl")
region = Rect2(192, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5uf7"]
atlas = ExtResource("6_qw8kl")
region = Rect2(224, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0epwp"]
atlas = ExtResource("6_qw8kl")
region = Rect2(256, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6ftq"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu357"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cw52"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3evgq"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emdq3"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_okoaw"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0qvi"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4cqr"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iwa0"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy0ab"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jay42"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay0t0"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swvq7"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61p82"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib1q7"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m1in"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrkk0"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uln5q"]
atlas = ExtResource("6_qw8kl")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu0mr"]
atlas = ExtResource("6_qw8kl")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh8a6"]
atlas = ExtResource("6_qw8kl")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmt55"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_502n3"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7yc"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b44sc"]
atlas = ExtResource("6_qw8kl")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y8ux"]
atlas = ExtResource("6_qw8kl")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddohx"]
atlas = ExtResource("6_qw8kl")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw74m"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi3nf"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkxjo"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78djh"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0njcm"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdf4h"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_msk4e"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mefsg"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_waai1"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w53kx"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it5p4"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j0m7"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdt6e"]
atlas = ExtResource("6_qw8kl")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_85fk3"]
atlas = ExtResource("6_qw8kl")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_weuci"]
atlas = ExtResource("6_qw8kl")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3teo"]
atlas = ExtResource("6_qw8kl")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkeb8"]
atlas = ExtResource("6_qw8kl")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0q1h"]
atlas = ExtResource("6_qw8kl")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mat15"]
atlas = ExtResource("6_qw8kl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j4ir"]
atlas = ExtResource("6_qw8kl")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar0hm"]
atlas = ExtResource("6_qw8kl")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8abe"]
atlas = ExtResource("6_qw8kl")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuxjg"]
atlas = ExtResource("6_qw8kl")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m018d"]
atlas = ExtResource("6_qw8kl")
region = Rect2(256, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5rey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q32mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5uf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0epwp")
}],
"loop": true,
"name": &"damage_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6ftq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu357")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cw52")
}],
"loop": true,
"name": &"damage_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3evgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emdq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okoaw")
}],
"loop": true,
"name": &"damage_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0qvi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4cqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iwa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy0ab")
}],
"loop": true,
"name": &"run_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jay42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay0t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swvq7")
}],
"loop": true,
"name": &"run_forward",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61p82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib1q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m1in")
}],
"loop": true,
"name": &"run_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrkk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uln5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu0mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh8a6")
}],
"loop": true,
"name": &"run_left_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmt55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_502n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7yc")
}],
"loop": true,
"name": &"run_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b44sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y8ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddohx")
}],
"loop": true,
"name": &"run_right_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw74m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi3nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkxjo")
}],
"loop": true,
"name": &"slash_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0njcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdf4h")
}],
"loop": true,
"name": &"slash_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msk4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mefsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waai1")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w53kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it5p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j0m7")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdt6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85fk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weuci")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3teo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkeb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0q1h")
}],
"loop": true,
"name": &"walk_left_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mat15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j4ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar0hm")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8abe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuxjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m018d")
}],
"loop": true,
"name": &"walk_right_back",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icp2j"]
size = Vector2(15, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ix2a"]
radius = 30.0
height = 68.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ohx01")
inv = ExtResource("2_ptwas")
apple = ExtResource("3_5akqf")
stick = ExtResource("4_id0fg")
slime = ExtResource("5_co0ru")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.30249, 2.11168)
sprite_frames = SubResource("SpriteFrames_v5rey")
animation = &"damage_left"
offset = Vector2(3, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_icp2j")
debug_color = Color(0.960784, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_0ix2a")

[node name="DealDamageCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="WalkingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_07jjb")
volume_db = -8.0
bus = &"SFX"

[node name="runningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_e31mb")
volume_db = -8.0
bus = &"SFX"

[node name="waterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_lgmpu")
volume_db = 2.0
bus = &"SFX"

[node name="waterRunningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_xvk8f")
volume_db = 7.0
bus = &"SFX"

[node name="cartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_nbevf")
volume_db = 2.0
pitch_scale = 2.0
bus = &"SFX"

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_trpnf")
bus = &"SFX"

[node name="PlayerAttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_nbf0a")
bus = &"SFX"

[node name="BlockingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_mii8g")
volume_db = 5.0
bus = &"SFX"

[node name="EatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_r4nuc")
bus = &"SFX"

[node name="TransferSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_yiflp")
bus = &"SFX"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="DealDamageCooldown" to="." method="_on_deal_damage_cooldown_timeout"]
